Fix button text and bio section on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -54,211 +54,211 @@ box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(3px, 9999px, 78px, 0);
-    transform: skew(0.69deg);
+    clip: rect(58px, 9999px, 99px, 0);
+    transform: skew(0.86deg);
   }
   5% {
-    clip: rect(99px, 9999px, 73px, 0);
-    transform: skew(0.64deg);
-  }
-  10% {
-    clip: rect(88px, 9999px, 37px, 0);
-    transform: skew(0.07deg);
-  }
-  15% {
-    clip: rect(24px, 9999px, 84px, 0);
-    transform: skew(0.56deg);
-  }
-  20% {
-    clip: rect(100px, 9999px, 38px, 0);
+    clip: rect(50px, 9999px, 13px, 0);
     transform: skew(0.75deg);
   }
+  10% {
+    clip: rect(70px, 9999px, 46px, 0);
+    transform: skew(0.61deg);
+  }
+  15% {
+    clip: rect(69px, 9999px, 86px, 0);
+    transform: skew(0.73deg);
+  }
+  20% {
+    clip: rect(52px, 9999px, 57px, 0);
+    transform: skew(0.71deg);
+  }
   25% {
-    clip: rect(30px, 9999px, 11px, 0);
-    transform: skew(0.21deg);
+    clip: rect(77px, 9999px, 37px, 0);
+    transform: skew(0.68deg);
   }
   30% {
-    clip: rect(84px, 9999px, 72px, 0);
-    transform: skew(0.1deg);
+    clip: rect(13px, 9999px, 62px, 0);
+    transform: skew(0.65deg);
   }
   35% {
-    clip: rect(91px, 9999px, 57px, 0);
-    transform: skew(0.8deg);
+    clip: rect(65px, 9999px, 23px, 0);
+    transform: skew(0.29deg);
   }
   40% {
-    clip: rect(38px, 9999px, 54px, 0);
-    transform: skew(0.38deg);
+    clip: rect(69px, 9999px, 82px, 0);
+    transform: skew(0.91deg);
   }
   45% {
-    clip: rect(49px, 9999px, 1px, 0);
-    transform: skew(0.65deg);
+    clip: rect(49px, 9999px, 76px, 0);
+    transform: skew(0.56deg);
   }
   50% {
-    clip: rect(30px, 9999px, 98px, 0);
-    transform: skew(0.81deg);
+    clip: rect(74px, 9999px, 55px, 0);
+    transform: skew(0.34deg);
   }
   55% {
-    clip: rect(23px, 9999px, 82px, 0);
-    transform: skew(0.28deg);
+    clip: rect(58px, 9999px, 22px, 0);
+    transform: skew(0.34deg);
   }
   60% {
-    clip: rect(13px, 9999px, 36px, 0);
-    transform: skew(0.97deg);
+    clip: rect(39px, 9999px, 60px, 0);
+    transform: skew(0.19deg);
   }
   65% {
-    clip: rect(10px, 9999px, 13px, 0);
-    transform: skew(0.69deg);
+    clip: rect(59px, 9999px, 97px, 0);
+    transform: skew(0.2deg);
   }
   70% {
-    clip: rect(71px, 9999px, 47px, 0);
-    transform: skew(0.49deg);
+    clip: rect(81px, 9999px, 16px, 0);
+    transform: skew(0.76deg);
   }
   75% {
-    clip: rect(73px, 9999px, 81px, 0);
-    transform: skew(0.24deg);
+    clip: rect(78px, 9999px, 40px, 0);
+    transform: skew(0.49deg);
   }
   80% {
-    clip: rect(49px, 9999px, 50px, 0);
-    transform: skew(0.35deg);
+    clip: rect(4px, 9999px, 53px, 0);
+    transform: skew(0.29deg);
   }
   85% {
-    clip: rect(100px, 9999px, 87px, 0);
-    transform: skew(0.9deg);
+    clip: rect(72px, 9999px, 84px, 0);
+    transform: skew(0.6deg);
   }
   90% {
-    clip: rect(99px, 9999px, 25px, 0);
-    transform: skew(0.63deg);
+    clip: rect(45px, 9999px, 79px, 0);
+    transform: skew(0.69deg);
   }
   95% {
-    clip: rect(13px, 9999px, 28px, 0);
-    transform: skew(0.65deg);
+    clip: rect(87px, 9999px, 70px, 0);
+    transform: skew(0.7deg);
   }
   100% {
-    clip: rect(47px, 9999px, 14px, 0);
-    transform: skew(0.76deg);
+    clip: rect(46px, 9999px, 58px, 0);
+    transform: skew(0.68deg);
   }
 }
 /* // Same deal, just duplicated for ultra randomness. */
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(37px, 9999px, 9px, 0);
-    transform: skew(0.9deg);
+    clip: rect(36px, 9999px, 25px, 0);
+    transform: skew(0.31deg);
   }
   5% {
-    clip: rect(7px, 9999px, 62px, 0);
-    transform: skew(0.96deg);
+    clip: rect(49px, 9999px, 44px, 0);
+    transform: skew(0.69deg);
   }
   10% {
-    clip: rect(83px, 9999px, 74px, 0);
-    transform: skew(0.22deg);
+    clip: rect(59px, 9999px, 47px, 0);
+    transform: skew(0.12deg);
   }
   15% {
-    clip: rect(55px, 9999px, 23px, 0);
-    transform: skew(0.86deg);
+    clip: rect(25px, 9999px, 41px, 0);
+    transform: skew(0.04deg);
   }
   20% {
-    clip: rect(5px, 9999px, 6px, 0);
-    transform: skew(0.44deg);
+    clip: rect(31px, 9999px, 99px, 0);
+    transform: skew(0.75deg);
   }
   25% {
-    clip: rect(79px, 9999px, 48px, 0);
-    transform: skew(0.65deg);
+    clip: rect(93px, 9999px, 78px, 0);
+    transform: skew(0.03deg);
   }
   30% {
-    clip: rect(95px, 9999px, 11px, 0);
-    transform: skew(0.2deg);
+    clip: rect(51px, 9999px, 20px, 0);
+    transform: skew(0.54deg);
   }
   35% {
-    clip: rect(28px, 9999px, 5px, 0);
-    transform: skew(0.28deg);
+    clip: rect(56px, 9999px, 34px, 0);
+    transform: skew(0.75deg);
   }
   40% {
-    clip: rect(44px, 9999px, 5px, 0);
-    transform: skew(0.47deg);
+    clip: rect(17px, 9999px, 69px, 0);
+    transform: skew(0.5deg);
   }
   45% {
-    clip: rect(6px, 9999px, 89px, 0);
-    transform: skew(0.32deg);
+    clip: rect(13px, 9999px, 69px, 0);
+    transform: skew(0.92deg);
   }
   50% {
-    clip: rect(10px, 9999px, 27px, 0);
-    transform: skew(0.89deg);
+    clip: rect(3px, 9999px, 38px, 0);
+    transform: skew(0.61deg);
   }
   55% {
-    clip: rect(59px, 9999px, 68px, 0);
-    transform: skew(0.17deg);
+    clip: rect(95px, 9999px, 13px, 0);
+    transform: skew(0.37deg);
   }
   60% {
-    clip: rect(49px, 9999px, 68px, 0);
-    transform: skew(0.64deg);
+    clip: rect(71px, 9999px, 96px, 0);
+    transform: skew(0.69deg);
   }
   65% {
-    clip: rect(27px, 9999px, 28px, 0);
-    transform: skew(0.93deg);
+    clip: rect(82px, 9999px, 69px, 0);
+    transform: skew(0.71deg);
   }
   70% {
-    clip: rect(12px, 9999px, 91px, 0);
-    transform: skew(0.85deg);
+    clip: rect(60px, 9999px, 83px, 0);
+    transform: skew(0.31deg);
   }
   75% {
-    clip: rect(88px, 9999px, 67px, 0);
-    transform: skew(0.56deg);
+    clip: rect(42px, 9999px, 8px, 0);
+    transform: skew(0.67deg);
   }
   80% {
-    clip: rect(59px, 9999px, 100px, 0);
-    transform: skew(0.18deg);
+    clip: rect(99px, 9999px, 56px, 0);
+    transform: skew(0.49deg);
   }
   85% {
-    clip: rect(6px, 9999px, 64px, 0);
-    transform: skew(0.84deg);
+    clip: rect(31px, 9999px, 90px, 0);
+    transform: skew(0.66deg);
   }
   90% {
-    clip: rect(92px, 9999px, 65px, 0);
-    transform: skew(0.65deg);
+    clip: rect(100px, 9999px, 97px, 0);
+    transform: skew(0.86deg);
   }
   95% {
-    clip: rect(14px, 9999px, 67px, 0);
-    transform: skew(0.99deg);
+    clip: rect(35px, 9999px, 69px, 0);
+    transform: skew(0.11deg);
   }
   100% {
-    clip: rect(99px, 9999px, 3px, 0);
-    transform: skew(1deg);
+    clip: rect(1px, 9999px, 52px, 0);
+    transform: skew(0.66deg);
   }
 }
 /* // Does the same deal as before, but now only skews. Used for main text. */
 @keyframes glitch-skew {
   0% {
-    transform: skew(-2deg);
+    transform: skew(-1deg);
   }
   10% {
-    transform: skew(2deg);
+    transform: skew(3deg);
   }
   20% {
     transform: skew(4deg);
   }
   30% {
-    transform: skew(3deg);
+    transform: skew(-1deg);
   }
   40% {
-    transform: skew(-1deg);
+    transform: skew(3deg);
   }
   50% {
-    transform: skew(2deg);
+    transform: skew(-3deg);
   }
   60% {
-    transform: skew(-1deg);
+    transform: skew(0deg);
   }
   70% {
-    transform: skew(4deg);
+    transform: skew(-4deg);
   }
   80% {
-    transform: skew(-3deg);
+    transform: skew(4deg);
   }
   90% {
-    transform: skew(-3deg);
+    transform: skew(2deg);
   }
   100% {
-    transform: skew(4deg);
+    transform: skew(2deg);
   }
 }
 @keyframes glitchout {
@@ -594,6 +594,10 @@ li.tab {
     font-size: 0.9em;
   }
 
+  .btn {
+    font-size: 0.8em;
+  }
+
   /* Section Layout & Styling */
   .container > .right-sidebar {
     top: 0;
@@ -633,6 +637,7 @@ li.tab {
   }
 
   #bio {
+    padding: relative;
     z-index: 2;
   }
 }
